--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@ wheels/
 MANIFEST
 
 # PyInstaller
-#  Usually these files are written by a python script from a template
+#  Usually these files are written by a python script from a templates
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
@@ -120,3 +120,5 @@ node_modules/
 
 # poetry
 poetry.lock
+
+*.sqlite3
